--- a/src/app/shared/componens/header/header.component.html
+++ b/src/app/shared/componens/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<mat-toolbar>
+    <div class="container">
+        <div class="container-content">
+            <div class="title">Gerenciador de Produtos</div>
+        </div>
+    </div>
+    
+</mat-toolbar>
