--- a/src/app/features/edit/edit.component.html
+++ b/src/app/features/edit/edit.component.html
@@ -1,1 +1,11 @@
-<p>edit works!</p>
+<form [formGroup]="form"(ngSubmit)="onPut()" class="form-container">
+    <div class="form-content-container">
+        <mat-form-field color="accent">
+            <mat-label></mat-label>
+            <input matInput type="text" formControlName="title" placeholder="Título">
+        </mat-form-field>
+        <button type="submit" mat-raised-button color="primary">Salvar</button>
+    </div>
+
+</form>
+    
