--- a/src/app/features/list/list.component.html
+++ b/src/app/features/list/list.component.html
@@ -2,7 +2,14 @@
     <a mat-raised-button color="primary" [routerLink]="['/create-product']">Criar Produto</a>
 </div>
 @for(product of products(); track product.id) {
-    <app-card [product]="product" (edit)="onEdit(product)" (delete)="onDelete(product)"></app-card>
+    @defer(on immediate) {
+        <app-card 
+            class="item-container" 
+            [product]="product" 
+            (edit)="onEdit(product)" 
+            (delete)="onDelete(product)">
+        </app-card>
+    })
 }
 @empty {
     <app-no-items></app-no-items>
